# trajopt

cmake/modules/: FindGUROBI.cmake
src/cloudproc/: cloudprocpy.cpp
src/trajopt/: CMakeLists.txt  bullet_collision_checker.cpp  collision_checker.hpp
trajoptpy/: animate_traj.py
trajoptpy-bugfix/: CMakeLists.txt  README.md
